# astar

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  a_star_search.hpp  cycle_decomposition.hpp  examples.txt  n_sq_puzzle.hpp  solve_magic_square.cpp  solve_n_sq_puzzle.cpp  test_a_star_search.cpp  test_cycle_decomposition.cpp  test_n_sq_puzzle.cpp
examples/: CMakeLists.txt
examples/include/: cycle_decomposition.hpp  n_sq_puzzle.hpp  solve_helpers.hpp
examples/src/: n_sq_puzzle.hpp  solve_magic_square.cpp  solve_n_sq_puzzle.cpp  test_a_star_search.cpp  test_cycle_decomposition.cpp  test_n_sq_puzzle.cpp
include/astar/: a_star_search.hpp  cost_value.hpp  ida_star_search.hpp
include/astar/detail/: ida_search.hpp  node.hpp
tests/: CMakeLists.txt
tests/src/: adj_list_graph.h  astar_tests.cpp  cycle_decomposition_tests.cpp  dijkstra_search_tests.cpp  get_path_cost.h  grid.h  ida_star_tests.cpp  n_sq_puzzle_tests.cpp  shortest_path_tests.cpp  solve_n_sq_puzzle_tests.cpp
